# binrpc-client

./: .gitignore  CMakeLists.txt  configure.ac  makeRelease.sh
debian/: changelog  control  copyright  rules
src/: Makefile.am  main.cpp
